[package]
name = "schema-risk"
version = "2.0.0"
edition = "2021"
authors = ["Keystones-lab"]
description = "Stop dangerous database migrations before they reach production"
license = "MIT"
repository = "https://github.com/Keystones-Lab/Schema-risk"
homepage = "https://github.com/Keystones-Lab/Schema-risk"
documentation = "https://docs.rs/schema-risk"
readme = "README.md"
keywords = ["database", "migration", "sql", "postgresql", "safety"]
categories = ["command-line-utilities", "database"]

[lib]
name = "schema_risk"
path = "src/lib.rs"

[[bin]]
name = "schema-risk"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "color", "env"] }

# SQL parsing
sqlparser = "0.53"

# Async runtime (minimal features for faster compile)
tokio = { version = "1.44", features = ["rt-multi-thread", "macros"] }

# Graph analysis for dependency tracking
petgraph = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Terminal colors and formatting
colored = "2"

# Rich terminal tables
comfy-table = "7"

# Structured logging (minimal for faster compile)
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi"] }

# Timestamps (minimal features)
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

# Regex for pattern matching
regex = "1.11"

# Glob for multi-file analysis
glob = "0.3"

# Environment variable loading
dotenvy = "0.15"

# PostgreSQL driver (optional)
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"], optional = true }

# sqlx-based PostgreSQL driver (alternative, feature-gated)
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros"], optional = true }

# Parallel file scanning
rayon = "1.10"

# HTTP for GitHub API (optional)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false, optional = true }

# YAML config
serde_yaml = "0.9"

[features]
default = []
db = ["tokio-postgres"]
sqlx-db = ["sqlx"]
github = ["reqwest"]
full = ["db", "github"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary
strip = true        # Strip symbols

[profile.dev]
opt-level = 0
debug = true
